/*
 * Copyright 2026 Yellowbrick Data, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package ai.floedb.floecat.service.it;

import static org.junit.jupiter.api.Assertions.*;

import ai.floedb.floecat.common.rpc.ResourceId;
import ai.floedb.floecat.common.rpc.ResourceKind;
import ai.floedb.floecat.query.rpc.BeginQueryRequest;
import ai.floedb.floecat.query.rpc.EndQueryRequest;
import ai.floedb.floecat.query.rpc.QueryServiceGrpc;
import ai.floedb.floecat.service.bootstrap.impl.SeedRunner;
import ai.floedb.floecat.service.it.profiles.FlightDevProfile;
import ai.floedb.floecat.service.query.flight.FlightServerLifecycle;
import ai.floedb.floecat.service.util.TestDataResetter;
import ai.floedb.floecat.system.rpc.SystemTableFlightCommand;
import ai.floedb.floecat.systemcatalog.graph.SystemNodeRegistry;
import ai.floedb.floecat.systemcatalog.util.EngineCatalogNames;
import io.grpc.Metadata;
import io.quarkus.grpc.GrpcClient;
import io.quarkus.test.junit.QuarkusTest;
import io.quarkus.test.junit.TestProfile;
import jakarta.inject.Inject;
import java.util.ArrayList;
import java.util.List;
import org.apache.arrow.flight.CallHeaders;
import org.apache.arrow.flight.CallOption;
import org.apache.arrow.flight.FlightClient;
import org.apache.arrow.flight.FlightDescriptor;
import org.apache.arrow.flight.FlightInfo;
import org.apache.arrow.flight.FlightStream;
import org.apache.arrow.flight.HeaderCallOption;
import org.apache.arrow.flight.Location;
import org.apache.arrow.flight.grpc.MetadataAdapter;
import org.apache.arrow.memory.BufferAllocator;
import org.apache.arrow.memory.RootAllocator;
import org.apache.arrow.vector.FieldVector;
import org.apache.arrow.vector.VectorSchemaRoot;
import org.junit.jupiter.api.AfterEach;
import org.junit.jupiter.api.BeforeEach;
import org.junit.jupiter.api.Test;

/**
 * Integration tests for the Arrow Flight server for FLOECAT system tables.
 *
 * <p>Tests: getFlightInfo returns projected schema; getStream returns matching data; schema from
 * getFlightInfo matches schema from getStream.
 */
@QuarkusTest
@TestProfile(FlightDevProfile.class)
public class SystemTableFlightIT {

  @Inject FlightServerLifecycle flightServer;

  @GrpcClient("floecat")
  QueryServiceGrpc.QueryServiceBlockingStub queries;

  @Inject TestDataResetter resetter;
  @Inject SeedRunner seeder;

  private BufferAllocator allocator;
  private FlightClient client;
  private String queryId;

  private static CallOption queryHeader(String queryId) {
    Metadata metadata = new Metadata();
    metadata.put(Metadata.Key.of("x-query-id", Metadata.ASCII_STRING_MARSHALLER), queryId);
    CallHeaders headers = new MetadataAdapter(metadata);
    return new HeaderCallOption(headers);
  }

  @BeforeEach
  void setUp() {
    resetter.wipeAll();
    seeder.seedData();
    allocator = new RootAllocator(Long.MAX_VALUE);
    int port = flightServer.port();
    assertTrue(port > 0, "Flight server should be running on a valid port");
    client = FlightClient.builder(allocator, Location.forGrpcInsecure("localhost", port)).build();
    queryId =
        queries
            .beginQuery(
                BeginQueryRequest.newBuilder()
                    .setDefaultCatalogId(
                        SystemNodeRegistry.systemCatalogContainerId(
                            EngineCatalogNames.FLOECAT_DEFAULT_CATALOG))
                    .build())
            .getQuery()
            .getQueryId();
    assertFalse(queryId.isBlank(), "BeginQuery must return a queryId");
  }

  @AfterEach
  void tearDown() throws Exception {
    if (queryId != null && !queryId.isBlank()) {
      queries.endQuery(EndQueryRequest.newBuilder().setQueryId(queryId).setCommit(true).build());
    }
    if (client != null) {
      client.close();
    }
    if (allocator != null) {
      allocator.close();
    }
  }

  @Test
  void getFlightInfo_returnsProjectedSchemaForInformationSchemaColumns() {
    ResourceId tableId = informationSchemaColumnsTableId();
    SystemTableFlightCommand command =
        SystemTableFlightCommand.newBuilder().setTableId(tableId).setQueryId(queryId).build();
    FlightDescriptor descriptor = FlightDescriptor.command(command.toByteArray());

    FlightInfo info = client.getInfo(descriptor, queryHeader(queryId));

    assertNotNull(info, "FlightInfo should not be null");
    var schema =
        info.getSchemaOptional().orElseThrow(() -> new AssertionError("FlightInfo schema missing"));
    assertFalse(schema.getFields().isEmpty(), "Schema should have fields");
    assertFalse(info.getEndpoints().isEmpty(), "FlightInfo should have at least one endpoint");
  }

  @Test
  void getFlightInfo_projectedSchemaMatchesStreamSchema() {
    ResourceId tableId = informationSchemaColumnsTableId();
    SystemTableFlightCommand command =
        SystemTableFlightCommand.newBuilder()
            .setTableId(tableId)
            .addRequiredColumns("table_name")
            .addRequiredColumns("column_name")
            .build();
    FlightDescriptor descriptor = FlightDescriptor.command(command.toByteArray());

    FlightInfo info = client.getInfo(descriptor, queryHeader(queryId));
    var projectedSchema =
        info.getSchemaOptional().orElseThrow(() -> new AssertionError("Projected schema missing"));
    assertEquals(2, projectedSchema.getFields().size(), "Projected schema should have 2 fields");
    assertEquals("table_name", projectedSchema.getFields().get(0).getName());
    assertEquals("column_name", projectedSchema.getFields().get(1).getName());

    // Verify the stream also has the projected schema
    List<List<String>> rows = readRows(info);
    // Rows may be empty if no data, but that's OK â€” schema consistency is what we test here.
    // The schema used for reading succeeded without an error.
  }

  @Test
  void getStream_returnsRowsForInformationSchemaTables() {
    ResourceId tableId = informationSchemaTablesTableId();
    SystemTableFlightCommand command =
        SystemTableFlightCommand.newBuilder().setTableId(tableId).build();
    FlightDescriptor descriptor = FlightDescriptor.command(command.toByteArray());

    FlightInfo info = client.getInfo(descriptor, queryHeader(queryId));
    List<List<String>> rows = readRows(info);

    // information_schema.tables is always populated (at minimum with information_schema itself)
    assertFalse(rows.isEmpty(), "information_schema.tables should return at least one row");
  }

  @Test
  void getStream_projectionReducesColumns() {
    ResourceId tableId = informationSchemaColumnsTableId();
    SystemTableFlightCommand command =
        SystemTableFlightCommand.newBuilder()
            .setTableId(tableId)
            .addRequiredColumns("column_name")
            .build();
    FlightDescriptor descriptor = FlightDescriptor.command(command.toByteArray());

    FlightInfo info = client.getInfo(descriptor, queryHeader(queryId));
    var projectedSchema =
        info.getSchemaOptional().orElseThrow(() -> new AssertionError("schema missing"));
    assertEquals(1, projectedSchema.getFields().size());

    List<List<String>> rows = readRows(info);
    for (List<String> row : rows) {
      assertEquals(1, row.size(), "Each row should have exactly 1 column after projection");
    }
  }

  // -------------------------------------------------------------------------
  //  Helpers
  // -------------------------------------------------------------------------

  private List<List<String>> readRows(FlightInfo info) {
    List<List<String>> rows = new ArrayList<>();
    for (var endpoint : info.getEndpoints()) {
      try (FlightStream stream = client.getStream(endpoint.getTicket(), queryHeader(queryId))) {
        VectorSchemaRoot root = stream.getRoot();
        while (stream.next()) {
          for (int i = 0; i < root.getRowCount(); i++) {
            List<String> row = new ArrayList<>();
            for (FieldVector vector : root.getFieldVectors()) {
              Object val = vector.getObject(i);
              row.add(val == null ? null : val.toString());
            }
            rows.add(row);
          }
        }
      } catch (Exception e) {
        throw new RuntimeException("Failed to read Flight stream", e);
      }
    }
    return rows;
  }

  /** Returns the ResourceId for information_schema.columns in the FLOECAT default engine. */
  private static ResourceId informationSchemaColumnsTableId() {
    return systemTableId("information_schema.columns");
  }

  private static ResourceId informationSchemaTablesTableId() {
    return systemTableId("information_schema.tables");
  }

  private static ResourceId systemTableId(String qualifiedName) {
    return SystemNodeRegistry.resourceId(
        EngineCatalogNames.FLOECAT_DEFAULT_CATALOG, ResourceKind.RK_TABLE, qualifiedName);
  }
}
